# WiSDON-AiTrainingPlatform

./: .gitignore  README.md  test.py
AiTrainingPlatform_Flower/: docker-compose.yml  install.sh  install_superlink_supernode.sh
AiTrainingPlatform_Flower/flower_client/: main.py
AiTrainingPlatform_Flower/flower_client/app/: flwr_client.py
AiTrainingPlatform_Flower/flower_client/app/NES/: agent.py  client.py
AiTrainingPlatform_Flower/flower_client/gRPC_Service/: grpc_client.py
AiTrainingPlatform_Flower/flower_server/app/: flwr_server.py
AiTrainingPlatform_Flower/flower_server/app/NES/: __init__.py  model.py
AiTrainingPlatform_Flower/quickstart-pytorch/: install_app.sh  pyproject.toml  superexec.Dockerfile
AiTrainingPlatform_Flower/quickstart-pytorch/pytorchexample/: server_app.py
AiTrainingPlatform_Flower/src/app/network-energy-saving/: pyproject.toml  start_supernode.sh  superexec.Dockerfile
AiTrainingPlatform_Flower/src/app/network-energy-saving/network_energy_saving/: __init__.py  agent.py  client_app.py  server_app.py
AiTrainingPlatform_Flower/src/flower_controller/: .dockerignore  Dockerfile  README.md  controller_main.py  docker-compose.yml  test_client.py
AiTrainingPlatform_Flower/src/flower_controller/app/network-energy-saving/: requirements.txt  update_config.sh
AiTrainingPlatform_Flower/src/flower_controller/src/yakindu/: rx.py
AiTrainingPlatform_Flower/src/flower_controller/srcgen/: flower_controller.py
AiTrainingPlatform_Flower/src/model_repository/: Dockerfile  docker-compose.yml
NES_testcode/: data_reloader.py  ddpg-nes-allscen_lstm_8f_v22_onnx.py  influx_to_mongo.py  print_data.py
NES_testcode/nes_sim/: requirements.txt  simulator_local.py.bk
NES_testcode/trajectory/: read_npz.py
archive/AiTrainingPlatform_Flower/: install_database.sh  uninstall.sh
archive/AiTrainingPlatform_Flower/flower_client/app/: FlowerClient.py  data_loader.py
archive/AiTrainingPlatform_Flower/flower_client/app/NES/: __init__.py
archive/AiTrainingPlatform_Flower/flower_server/app/NES/: agent.py  client.py
archive/AiTrainingPlatform_Flower/quickstart-pytorch/network_energy_saving/: client_app.py  server_app.py
archive/AiTrainingPlatform_Flower/src/api_server/: runAPI.py
archive/AiTrainingPlatform_Flower/src/app/network-energy-saving/: install_app.sh  requirements.txt
archive/AiTrainingPlatform_Flower/src/flower_controller/: flower_app_handler.py  requirements.txt
archive/AiTrainingPlatform_Flower/src/model_repository/: README.md  client_example.py  install.sh
archive/NES_testcode/: push_data.py
archive/NES_testcode/nes_sim/: ddpg_nes_allscen_lstm_8f_v22.py  simulator_local.py
src/MinIO/: docker-compose.yml
src/api_server/: __init__.py
src/api_server/controller/: controller_main.py  task_queue.py
src/database/: docker-compose.yml
src/flower_controller/: Dockerfile  docker-compose.yml  test_client.py  update_app.sh
src/flower_controller/api_server_controller/: Dockerfile  buildAPI.py  runAPI.py  training_task_queue.py
src/flower_controller/api_server_controller/controller/: controller_main.py
src/flower_controller/api_server_controller/controller/apiserver/: apiserver.py
src/flower_controller/api_server_controller/controller/flower/: flower_controller.py
src/flower_controller/app/network-energy-saving/: pyproject.toml
src/flower_controller/app/network-energy-saving/network_energy_saving/: agent.py  client_app.py  data_loader.py  environment.py  server_app.py
src/main/: Dockerfile  docker-compose.yml  test.py
src/main/api_server_controller/: Dockerfile  buildAPI.py  requirements.txt  runAPI.py  training_task_queue.py
src/main/api_server_controller/controller/: controller_main.py
src/main/api_server_controller/method/: __init__.py
src/main/app/netdt/: pyproject.toml
src/main/app/network-energy-saving/: README.md  pyproject.toml
src/model_repository/: docker-compose.yml  model_server.py  uninstall.sh
(+48 files in other folders)
