# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "network-energy-saving"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.24.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "WiSDON"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "network_energy_saving.server_app:app"
clientapp = "network_energy_saving.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 1
fraction-train = 1
local-epochs = 10
lr = 1e-4
app_name = "network_energy_saving"
project_id = "nes_testdata"
model_version = "0.0.1"
model_repository_url = "http://localhost:27016"
spilt = 0.1

# Default federation to use when running the app
[tool.flwr.federations]
default = "remote-federation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
# address = "<SUPERLINK-ADDRESS>:<PORT>"
address = "127.0.0.1:9093"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup

[tool.flwr.federations.network_energy_saving]
address = "127.0.0.1:9093"
insecure = true
